--- a/site.css
+++ b/site.css
@@ -32,11 +32,31 @@ footer{
   }
 }
 h1{
+  color: yellow;
   font-size: 5vw;
+  z-index: 2;
+  text-shadow: 3px 5px 3px red;
 }
 article{
   border: dashed 2px darkred;
   margin:10px;
+}
+.fire1{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.fire1 video{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  z-index: 1;
 }
 /*список кнопок*/
 .mybutton{
