--- a/site.css
+++ b/site.css
@@ -2,6 +2,10 @@ header{
   background-color: yellow;
   height: 200px;
 }
+article{
+  color: goldenrod;
+  text-shadow: 2px 1px 1px darkred;
+}
 nav{
   width: 15%;
   
