--- a/site.css
+++ b/site.css
@@ -1,29 +1,40 @@
+body{
+  background-color: gold ;
+}
 header{
   background-color: yellow;
   height: 200px;
 }
 article{
-  color: goldenrod;
+  color: khaki;
   text-shadow: 2px 1px 1px darkred;
+}
+.st1 {
+  color: goldenrod;
+  border: 3px solid orange;
+  padding: 10px;
+  border-radius: 8px;
+}
+.st2{
+  text-decoration: none;
+  color: black;
 }
 nav{
   width: 15%;
-  
   background-color: lawngreen;
   float: left;
 }
 main{
   width: 70%;
-  
   background-color: coral;
   float: left;
 }
 aside{
   width: 15%;
-  
   background-color: lightskyblue;
   float: left;
 }
+
 footer{
   height: 200px;
   background-color: lightpink;
@@ -37,14 +48,64 @@ footer{
 }
 h1{
   color: yellow;
-  font-size: 5vw;
+  font-size: 8vw;
   z-index: 2;
-  text-shadow: 3px 5px 3px red;
+ text-shadow: 0px 0px 7px red,
+     0px 0px 10px red,
+     0px 0px 21px red,
+     0px 0px 42px red,
+     0px 0px 82px red,
+     0px 0px 92px red;
+}
+h2{
+  color: midnightblue;
+    text-shadow: 0px 0px 7px cyan,
+     0px 0px 10px cyan,
+     0px 0px 21px cyan,
+     0px 0px 42px cyan,
+     0px 0px 82px cyan,
+     0px 0px 92px cyan;
+  font-size: 5vw;
+  text-align: center;
 }
 article{
-  border: dashed 2px darkred;
+  border: dashed 2px orange;
   margin:10px;
 }
+section {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+}
+
+.container {
+      position: relative;
+      width: 600px;
+      margin: 0 auto;
+      border: 5px solid #555;
+    }
+
+    .social-icons {
+    display: flex;
+    gap: 20px;
+  }
+  .social-icon img {
+    width: 30px;
+    height: 30px;
+    transition: transform 0.3s;
+  }
+  .social-icon img:hover {
+    transform: scale(1.1);
+  }
+
+.stick {
+  border: 5px solid #00ffff;
+  border-radius: 10px;
+  box-shadow: 0 0 20px #00ffff;
+  max-width: 100%;
+  height: auto;
+}
+
 .fire1{
   width: 100%;
   height: 100%;
@@ -61,6 +122,34 @@ article{
   left: 0;
   object-fit: cover;
   z-index: 1;
+}
+.audio{
+   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.audio-box {
+  max-width: 300px;
+  margin: 20px auto;
+  padding: 15px;
+  border: 3px solid #444;
+  border-radius: 15px;
+  background: linear-gradient(135deg, #222, #444);
+  box-shadow: 0 0 10px #000;
+  text-align: center;
+}
+
+.audio-box h2 {
+  color: #fff;
+  margin-top: 0;
+  font-family: 'Arial', sans-serif;
+  font-size: 18px;
+}
+
+.audio-box audio {
+  width: 100%;
+  margin-top: 10px;
 }
 /*список кнопок*/
 .mybutton{
@@ -95,3 +184,29 @@ article{
   .mybutton{
     width:25%;
   }
+  
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+  .fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+.fa-telegram {
+  background: #00aff0;
+  color: white;
+}
